finalize swagger doc
